[project]
name = "todo-cli"
version = "0.1.0"
description = "A simple command-line todo manager built with Typer and SQLModel."
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "sqlmodel>=0.0.22",
    "rich>=13.0.0",
]

[project.scripts]
todo = "todo_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["todo_cli"]
